added stub image and made exitButton

--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -92,12 +93,26 @@
                     <navigationItem key="navigationItem" id="GNc-Zs-Jrs"/>
                     <connections>
                         <outlet property="tableView" destination="eh5-wj-ME4" id="pV5-vQ-bAY"/>
-                        <segue destination="DmF-8O-fXI" kind="presentation" identifier="ShowSingleImage" id="zmB-JB-nuJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="553.43511450381675" y="414.78873239436621"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="RiA-6O-8J1">
+            <objects>
+                <viewController id="23n-Bi-eQ7" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3lE-Mv-pVp">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="QdH-SQ-MJk"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="I2O-KB-Z1r" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2152" y="283"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="MVV-Zb-ODF">
@@ -119,87 +134,10 @@
             </objects>
             <point key="canvasLocation" x="-300" y="751"/>
         </scene>
-        <!--Single Image View Controller-->
-        <scene sceneID="mUq-w9-lZU">
-            <objects>
-                <viewController modalPresentationStyle="fullScreen" id="DmF-8O-fXI" customClass="SingleImageViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="AxS-xJ-PgH">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T1S-Ik-jlJ">
-                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" placeholderIntrinsicWidth="400" placeholderIntrinsicHeight="400" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="wY0-wq-Hv2">
-                                        <rect key="frame" x="0.0" y="94" width="400" height="313"/>
-                                    </imageView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lhY-z6-7YE" userLabel="BackwardButton">
-                                        <rect key="frame" x="9" y="55" width="24" height="24"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="24" id="MZA-bB-qDK"/>
-                                            <constraint firstAttribute="height" constant="24" id="zhw-Mw-5BC"/>
-                                        </constraints>
-                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                        <state key="normal" image="backward"/>
-                                        <connections>
-                                            <action selector="didBackButtonTap:" destination="DmF-8O-fXI" eventType="touchUpInside" id="KKf-8a-hIv"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="wY0-wq-Hv2" secondAttribute="bottom" id="OBJ-kf-Czj"/>
-                                    <constraint firstItem="wY0-wq-Hv2" firstAttribute="top" secondItem="T1S-Ik-jlJ" secondAttribute="top" id="OFx-ef-tsw"/>
-                                    <constraint firstItem="wY0-wq-Hv2" firstAttribute="leading" secondItem="T1S-Ik-jlJ" secondAttribute="leading" id="ZXx-IN-3E4"/>
-                                    <constraint firstAttribute="trailing" secondItem="wY0-wq-Hv2" secondAttribute="trailing" id="lCW-w9-fn9"/>
-                                </constraints>
-                                <viewLayoutGuide key="contentLayoutGuide" id="gGf-s6-F0C"/>
-                                <viewLayoutGuide key="frameLayoutGuide" id="jbc-pj-oKr"/>
-                                <connections>
-                                    <outlet property="delegate" destination="DmF-8O-fXI" id="n5S-xw-bUS"/>
-                                </connections>
-                            </scrollView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lGQ-I4-apL" userLabel="ShareButton">
-                                <rect key="frame" x="171" y="751" width="51" height="51"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="51" id="0MA-hq-ABW"/>
-                                    <constraint firstAttribute="width" constant="51" id="ssd-m4-K8W"/>
-                                </constraints>
-                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" image="shareButton"/>
-                                <connections>
-                                    <action selector="didTapShareButton:" destination="DmF-8O-fXI" eventType="touchUpInside" id="rSh-5j-rdr"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="bqm-sO-Pab"/>
-                        <color key="backgroundColor" name="YPBlack"/>
-                        <constraints>
-                            <constraint firstItem="lhY-z6-7YE" firstAttribute="top" secondItem="bqm-sO-Pab" secondAttribute="top" constant="55" id="Az6-Q7-ao2"/>
-                            <constraint firstItem="T1S-Ik-jlJ" firstAttribute="bottom" secondItem="AxS-xJ-PgH" secondAttribute="bottom" id="UAQ-J8-dOu"/>
-                            <constraint firstItem="lGQ-I4-apL" firstAttribute="centerX" secondItem="bqm-sO-Pab" secondAttribute="centerX" id="YLq-vc-DpG"/>
-                            <constraint firstItem="lhY-z6-7YE" firstAttribute="leading" secondItem="bqm-sO-Pab" secondAttribute="leading" constant="9" id="ezM-Qt-s3O"/>
-                            <constraint firstItem="bqm-sO-Pab" firstAttribute="leading" secondItem="T1S-Ik-jlJ" secondAttribute="leading" id="jtG-6e-yCg"/>
-                            <constraint firstItem="T1S-Ik-jlJ" firstAttribute="trailing" secondItem="bqm-sO-Pab" secondAttribute="trailing" id="s79-hJ-Feb"/>
-                            <constraint firstItem="bqm-sO-Pab" firstAttribute="bottom" secondItem="lGQ-I4-apL" secondAttribute="bottom" constant="50" id="tzi-jZ-aaR"/>
-                            <constraint firstAttribute="top" secondItem="T1S-Ik-jlJ" secondAttribute="top" id="ybd-TX-2zl"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" id="3O2-0Z-RCk"/>
-                    <connections>
-                        <outlet property="imageView" destination="wY0-wq-Hv2" id="aKp-hY-zzR"/>
-                        <outlet property="scrollView" destination="T1S-Ik-jlJ" id="SYn-cz-vXn"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="qv9-4e-Iph" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1520" y="415"/>
-        </scene>
     </scenes>
     <resources>
         <image name="0" width="200" height="132"/>
-        <image name="backward" width="24" height="24"/>
         <image name="likeOn" width="42" height="42"/>
-        <image name="shareButton" width="51" height="51"/>
         <image name="tabBarItem:TYr-4u-7hx:image" width="30" height="30">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGBwpYJHZlcnNpb25ZJGFyY2hpdmVyVCR0b3BYJG9iamVjdHMSAAGGoF8QD05T
@@ -1314,5 +1252,8 @@ AAAAAAAAAGgAAAAAAAAAAAAAAAAAAQDcA
         <namedColor name="YPWhite">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
